@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-07T08:15:28Z",
-  "count_outdated" : 88,
-  "uniques_outdated" : 21,
+  "timestamp" : "2022-06-11T00:43:37Z",
+  "count_outdated" : 89,
+  "uniques_outdated" : 22,
   "count" : 100,
   "uniques" : 23,
   "views" : [
-    {
-      "timestamp": "2022-05-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-28T00:00:00Z",
       "count": 11,
