@@ -1,3 +1,10 @@
+2022-06-11T00:43:37Z:
+* notice: last 14d: unq all: 1 11
+* notice: prev accum: outdated-unq outdated-all / unq all: 21 88 / 23 100
+* notice: next accum: outdated-unq outdated-all / unq all: 22 89 / 23 100
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-05-27] / []
+
 2022-06-07T08:15:28Z:
 * notice: last 14d: unq all: 2 12
 * notice: prev accum: outdated-unq outdated-all / unq all: 20 86 / 23 100
